--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,6 @@
 /*app/globals.css*/
 
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,7 +8,7 @@
 @layer components {
     .sidebar-icon {
         @apply relative flex items-center justify-center h-16 w-16 mt-5 mb-5 mx-auto bg-gray-800 text-gray-400 rounded-3xl
-        hover:bg-blue-500 hover:text-white hover:rounded-xl transition-all duration-300 ease-linear cursor-pointer p-2.5;
+        hover:bg-blue-500 hover:text-white hover:rounded-none transition-all duration-300 ease-linear cursor-pointer p-2.5;
     }
 
     .sidebar-tooltip {
@@ -21,7 +22,7 @@
     }
     .home-icon {
         @apply relative flex items-center justify-center h-24 w-24 mt-5 mb-5 mx-auto bg-gray-800 text-gray-400 rounded-3xl
-        hover:bg-blue-500 hover:text-white hover:rounded-xl transition-all duration-300 ease-linear cursor-pointer p-2.5;
+        hover:bg-blue-500 hover:text-white hover:rounded-none transition-all duration-300 ease-linear cursor-pointer p-2.5;
     }
 }
 
@@ -30,7 +31,6 @@ body {
 }
 
 li {
-    /*@apply list-disc;*/
     font-size: smaller;
 
 }
